connect/disconnect from ws
Signed-off-by: Anastasia Lalamentik <anastasia.lalamentik@kaleido.io>

--- a/ui/src/translations/en.json
+++ b/ui/src/translations/en.json
@@ -13,10 +13,12 @@
   "dashboard": "Dashboard",
   "datatypeShortInfo": "Datatypes are broadcasts to the network so everybody refers to the same JSON schema when validating their data",
   "datatypeTitle": "Send a Broadcast Message",
+  "disconnect": "Disconnect",
   "disconnected": "Disconnected",
   "docs": "Docs",
   "durable": "Durable",
   "ephemeral": "Ephemeral",
+  "eventLogs": "Event Logs",
   "eventSubscription": "Event Subscription",
   "exampleAddress": "ex. 0x123....789",
   "exampleAmount": "ex. 10",
