--- a/ui/src/translations/en.json
+++ b/ui/src/translations/en.json
@@ -25,7 +25,7 @@
   "exampleFromAddress": "ex. 0x987....321",
   "exampleTag": "ex. new_widget",
   "exampleTopic": "ex. widget_123",
-  "filterEventSubscriptions": "Filter Event Subscriptions",
+  "filterEventSubscriptions": "Filter Event Subscriptions (Optional)",
   "fromAddress": "From Address",
   "fungible": "Fungible",
   "home": "Home",
@@ -60,5 +60,6 @@
   "transferTitle": "Transfer Tokens",
   "type": "Type",
   "typescriptSDK": "Typescript SDK",
+  "uploadFile": "Upload File",
   "websocketConnectionFailure" : "Failed to connect to websocket. Please try again."
 }
