add token index
Signed-off-by: Anastasia Lalamentik <anastasia.lalamentik@kaleido.io>

--- a/ui/src/translations/en.json
+++ b/ui/src/translations/en.json
@@ -53,6 +53,7 @@
   "subscription": "Subscription",
   "tag": "Tag",
   "toAddress": "To Address",
+  "tokenIndex": "Token Index",
   "tokenPool": "Token Pool",
   "tokenRecipient": "Token Recipient",
   "topic": "Topic",
