--- a/ui/src/translations/en.json
+++ b/ui/src/translations/en.json
@@ -2,6 +2,7 @@
   "abc": "ABC",
   "abcCoin": "ABC Coin",
   "amount": "Amount",
+  "apiResponse": "API Response",
   "broadcastShortInfo": "Sends a message visible to all parties in the network",
   "broadcastTitle": "Send a Broadcast Message",
   "burnShortInfo": "Burn a token in a token pool",
