moved header to left pane, handle ws filter refresh

--- a/ui/src/translations/en.json
+++ b/ui/src/translations/en.json
@@ -2,6 +2,7 @@
   "abc": "ABC",
   "abcCoin": "ABC Coin",
   "amount": "Amount",
+  "code": "Code",
   "apiResponse": "API Response",
   "broadcastShortInfo": "Sends a message visible to all parties in the network",
   "broadcastTitle": "Send a Broadcast Message",
@@ -49,6 +50,7 @@
   "privateShortInfo": "Sends a message to a restricted set of parties",
   "privateTitle": "Send a Private Message",
   "recipients": "Recipients",
+  "refreshConnection": "Refresh Connection",
   "run": "Run",
   "subscribe": "Subscribe",
   "subscription": "Subscription",
