add token balances to token operations
Signed-off-by: Anastasia Lalamentik <anastasia.lalamentik@kaleido.io>

--- a/ui/src/translations/en.json
+++ b/ui/src/translations/en.json
@@ -56,6 +56,7 @@
   "subscription": "Subscription",
   "tag": "Tag",
   "toAddress": "To Address",
+  "tokenBalance": "Token Balance",
   "tokenIndex": "Token Index",
   "tokenPool": "Token Pool",
   "tokenRecipient": "Token Recipient",
