--- a/ui/src/translations/en.json
+++ b/ui/src/translations/en.json
@@ -11,10 +11,12 @@
   "connect": "Connect",
   "connected": "Connected",
   "connectedToFirefly": "Connected to FireFly Node",
+  "contractInterfaceTitle": "Define a Contract Interface",
   "connector": "Connector",
   "dashboard": "Dashboard",
   "datatypeShortInfo": "Datatypes are broadcasts to the network so everybody refers to the same JSON schema when validating their data",
   "datatypeTitle": "Send a Broadcast Message",
+  "defineContractInterfaceInfo": "A Contract Interface is written in the FireFly Interface (FFI) format. It is a simple JSON document that has a name, a namespace, a version, a list of methods, and a list of events.",
   "disconnect": "Disconnect",
   "disconnected": "Disconnected",
   "docs": "Docs",
@@ -51,6 +53,8 @@
   "privateTitle": "Send a Private Message",
   "recipients": "Recipients",
   "refreshConnection": "Refresh Connection",
+  "registerContractApiInfo" : "Build an HTTP API for the smart contract you created, complete with an OpenAPI Specification and Swagger UI.",
+  "registerContractApiTitle" : "Register a Contract API",
   "run": "Run",
   "subscribe": "Subscribe",
   "subscription": "Subscription",
