[event-processing] code cleanup, styling, removing ws popover
Signed-off-by: David Echelberger <eberger727@gmail.com>

--- a/ui/src/translations/en.json
+++ b/ui/src/translations/en.json
@@ -2,15 +2,16 @@
   "abc": "ABC",
   "abcCoin": "ABC Coin",
   "amount": "Amount",
-  "code": "Code",
   "apiResponse": "API Response",
   "broadcastShortInfo": "Sends a message visible to all parties in the network",
   "broadcastTitle": "Send a Broadcast Message",
   "burnShortInfo": "Burn a token in a token pool",
   "burnTitle": "Burn a Token",
+  "code": "Code",
   "connect": "Connect",
   "connected": "Connected",
   "connectedToFirefly": "Connected to FireFly Node",
+  "connectedToWebsocketAt": "Connected to WebSocket at ",
   "connector": "Connector",
   "dashboard": "Dashboard",
   "datatypeShortInfo": "Datatypes are broadcasts to the network so everybody refers to the same JSON schema when validating their data",
@@ -32,6 +33,9 @@
   "fungible": "Fungible",
   "home": "Home",
   "message": "Message",
+  "messaging": "Messaging",
+  "tokens": "Tokens",
+  "contracts": "Contracts",
   "mintShortInfo": "Generate a new token in a token pool",
   "mintTitle": "Mint a Token",
   "name": "Name",
@@ -66,5 +70,5 @@
   "type": "Type",
   "typescriptSDK": "Typescript SDK",
   "uploadFile": "Upload File",
-  "websocketConnectionFailure" : "Failed to connect to websocket. Please try again."
+  "websocketConnectionFailure": "Failed to connect to websocket. Please try again."
 }
