contracts setup template
Signed-off-by: Anastasia Lalamentik <anastasia.lalamentik@kaleido.io>

--- a/ui/src/translations/en.json
+++ b/ui/src/translations/en.json
@@ -2,12 +2,10 @@
   "abc": "ABC",
   "abcCoin": "ABC Coin",
   "amount": "Amount",
-  "apiResponse": "API Response",
   "broadcastShortInfo": "Sends a message visible to all parties in the network",
   "broadcastTitle": "Send a Broadcast Message",
   "burnShortInfo": "Burn a token in a token pool",
   "burnTitle": "Burn a Token",
-  "code": "Code",
   "connect": "Connect",
   "connected": "Connected",
   "connectedToFirefly": "Connected to FireFly Node",
@@ -60,6 +58,8 @@
   "registerContractApiInfo": "Build an HTTP API for the smart contract you created, complete with an OpenAPI Specification and Swagger UI.",
   "registerContractApiTitle": "Register a Contract API",
   "run": "Run",
+  "serverCode": "Server Code",
+  "serverResponse": "Server Response",
   "subscribe": "Subscribe",
   "subscription": "Subscription",
   "tag": "Tag",
