--- a/ui/src/translations/en.json
+++ b/ui/src/translations/en.json
@@ -16,6 +16,8 @@
   "datatypeShortInfo": "Datatypes are broadcasts to the network so everybody refers to the same JSON schema when validating their data",
   "datatypeTitle": "Send a Broadcast Message",
   "defineContractInterfaceInfo": "A Contract Interface is written in the FireFly Interface (FFI) format. It is a simple JSON document that has a name, a namespace, a version, a list of methods, and a list of events.",
+  "deployContractInfo" : "Follow these steps to deploy a contract on FireFly.",
+  "deployContractTitle" : "Deploy a Contract",
   "disconnect": "Disconnect",
   "disconnected": "Disconnected",
   "docs": "Docs",
@@ -57,6 +59,8 @@
   "refreshConnection": "Refresh Connection",
   "registerContractApiInfo": "Build an HTTP API for the smart contract you created, complete with an OpenAPI Specification and Swagger UI.",
   "registerContractApiTitle": "Register a Contract API",
+  "registerContractApiListenerInfo" : "Receive blockchain events happening in realtime.",
+  "registerApiListenerTitle": "Register a Contract API LIstener",
   "run": "Run",
   "serverCode": "Server Code",
   "serverResponse": "Server Response",
