[events] events in right panel
Signed-off-by: David Echelberger <eberger727@gmail.com>

--- a/ui/src/translations/en.json
+++ b/ui/src/translations/en.json
@@ -2,7 +2,11 @@
   "abc": "ABC",
   "abcCoin": "ABC Coin",
   "amount": "Amount",
+  "apiID": "Api ID",
   "apiResponse": "API Response",
+  "batchMessages": "Batch Messages",
+  "blockchainEventID": "Blockchain Event ID",
+  "blockchainEventReceived": "Blockchain Event Received",
   "broadcastShortInfo": "Sends a message visible to all parties in the network",
   "broadcastTitle": "Send a Broadcast Message",
   "burnShortInfo": "Burn a token in a token pool",
@@ -13,7 +17,12 @@
   "connectedToFirefly": "Connected to FireFly Node",
   "connectedToWebsocketAt": "Connected to WebSocket at ",
   "connector": "Connector",
+  "contractApiConfirmed": "Contract API Confirmed",
+  "contractInterfaceConfirmed": "Contract Interface Confirmed",
+  "contracts": "Contracts",
   "dashboard": "Dashboard",
+  "datatypeConfirmed": "Datatype Confirmed",
+  "datatypeID": "Datatype ID",
   "datatypeShortInfo": "Datatypes are broadcasts to the network so everybody refers to the same JSON schema when validating their data",
   "datatypeTitle": "Send a Broadcast Message",
   "defineContractInterfaceInfo": "A Contract Interface is written in the FireFly Interface (FFI) format. It is a simple JSON document that has a name, a namespace, a version, a list of methods, and a list of events.",
@@ -23,6 +32,7 @@
   "durable": "Durable",
   "ephemeral": "Ephemeral",
   "events": "Events",
+  "eventsSubmittedWillShowHere": "Events submitted to FireFly will show here.",
   "eventSubscription": "Event Subscription",
   "exampleAddress": "ex. 0x123....789",
   "exampleAmount": "ex. 10",
@@ -33,20 +43,28 @@
   "fromAddress": "From Address",
   "fungible": "Fungible",
   "home": "Home",
+  "identityConfirmed": "Identity Confirmed",
+  "identityUpdated": "Identity Updated",
+  "interfaceID": "Interface ID",
   "message": "Message",
+  "messageConfirmed": "Message Confirmed",
+  "messageID": "Message ID",
+  "messageRejected": "Message Rejected",
+  "messageType": "Message Type",
   "messaging": "Messaging",
-  "tokens": "Tokens",
-  "contracts": "Contracts",
   "mintShortInfo": "Generate a new token in a token pool",
   "mintTitle": "Mint a Token",
   "name": "Name",
+  "namespaceConfirmed": "Namespace Confirmed",
   "noConnectors": "No Token Connectors",
   "nonfungible": "Non-Fungible",
   "notConnected": "Not Connected",
   "notConnectedToFirefly": "Not Connected to a FireFly Node",
   "noTokenPools": "No Token Pools",
   "nullAddress": "0x0000000000000000000000000000000000000000",
+  "operationErrorID": "Operation Error ID",
   "payload": "Payload",
+  "poolID": "Pool ID",
   "poolName": "Pool Name",
   "poolShortInfo": "Token pools are a FireFly construct for describing a set of tokens",
   "poolSymbol": "Pool Symbol",
@@ -54,24 +72,39 @@
   "postSentTo": "POST Sent to ",
   "privateShortInfo": "Sends a message to a restricted set of parties",
   "privateTitle": "Send a Private Message",
+  "protocolID": "Protocol ID",
   "recipients": "Recipients",
+  "referenceID": "Reference ID",
   "refreshConnection": "Refresh Connection",
   "registerContractApiInfo": "Build an HTTP API for the smart contract you created, complete with an OpenAPI Specification and Swagger UI.",
   "registerContractApiTitle": "Register a Contract API",
   "run": "Run",
+  "standard": "Standard",
   "subscribe": "Subscribe",
   "subscription": "Subscription",
+  "symbol": "Symbol",
   "tag": "Tag",
   "toAddress": "To Address",
+  "tokenApprovalConfirmed": "Token Approval Confirmed",
+  "tokenApprovalOpFailed": "Token Approval Operation Failed",
   "tokenBalance": "Token Balance",
   "tokenIndex": "Token Index",
   "tokenPool": "Token Pool",
+  "tokenPoolConfirmed": "Token Pool Confirmed",
   "tokenRecipient": "Token Recipient",
+  "tokens": "Tokens",
+  "tokenTransferConfirmed": "Token Transfer Confirmed",
+  "tokenTransferFailed": "Token Transfer Failed",
   "topic": "Topic",
+  "transactionID": "Transaction ID",
+  "transactionSubmitted": "Transaction Submitted",
+  "transferID": "Transfer ID",
   "transferShortInfo": "Transfer tokens from one address to another",
   "transferTitle": "Transfer Tokens",
+  "transferType": "Transfer Type",
   "type": "Type",
   "typescriptSDK": "Typescript SDK",
   "uploadFile": "Upload File",
+  "version": "Version",
   "websocketConnectionFailure": "Failed to connect to websocket. Please try again."
 }
