define ffi/abi contract interface
Signed-off-by: Anastasia Lalamentik <anastasia.lalamentik@kaleido.io>

--- a/ui/src/translations/en.json
+++ b/ui/src/translations/en.json
@@ -28,9 +28,9 @@
   "datatypeID": "Datatype ID",
   "datatypeShortInfo": "Datatypes are broadcasts to the network so everybody refers to the same JSON schema when validating their data",
   "datatypeTitle": "Send a Broadcast Message",
-  "defineContractInterfaceInfo": "A Contract Interface is written in the FireFly Interface (FFI) format. It is a simple JSON document that has a name, a namespace, a version, a list of methods, and a list of events.",
-  "deployContractInfo" : "Follow these steps to deploy a contract on FireFly.",
-  "deployContractTitle" : "Deploy a Contract",
+  "defineContractInterfaceInfo": "A Contract Interface schema may be in FFI or Solidity JSON ABI format.",
+  "deployContractInfo": "Follow these steps to deploy a contract on FireFly.",
+  "deployContractTitle": "Deploy a Contract",
   "disconnect": "Disconnect",
   "disconnected": "Disconnected",
   "docs": "Docs",
@@ -85,7 +85,7 @@
   "refreshConnection": "Refresh Connection",
   "registerContractApiInfo": "Build an HTTP API for the smart contract you created, complete with an OpenAPI Specification and Swagger UI.",
   "registerContractApiTitle": "Register a Contract API",
-  "registerContractApiListenerInfo" : "Receive blockchain events happening in realtime.",
+  "registerContractApiListenerInfo": "Receive blockchain events happening in realtime.",
   "registerApiListenerTitle": "Register a Contract API LIstener",
   "run": "Run",
   "schema": "Schema",
