--- a/ui/src/translations/en.json
+++ b/ui/src/translations/en.json
@@ -6,6 +6,7 @@
   "amount": "Amount",
   "apiID": "Api ID",
   "apiResponse": "API Response",
+  "backToStepOne": "Back to Step 1",
   "batchMessages": "Batch Messages",
   "blockchainEventID": "Blockchain Event ID",
   "blockchainEventReceived": "Blockchain Event Received",
@@ -19,6 +20,7 @@
   "connectedToFirefly": "Connected to FireFly Node",
   "connectedToWebsocketAt": "Connected to WebSocket at ",
   "connector": "Connector",
+  "contractInterface": "Contract Interface",
   "contractInterfaceTitle": "Define a Contract Interface",
   "contractApiConfirmed": "Contract API Confirmed",
   "contractInterfaceConfirmed": "Contract Interface Confirmed",
