fixes/null check
Signed-off-by: Anastasia Lalamentik <anastasia.lalamentik@kaleido.io>

--- a/ui/src/translations/en.json
+++ b/ui/src/translations/en.json
@@ -20,6 +20,7 @@
   "connectedToFirefly": "Connected to FireFly Node",
   "connectedToWebsocketAt": "Connected to WebSocket at ",
   "connector": "Connector",
+  "contractApi": "Contract API",
   "contractInterface": "Contract Interface",
   "contractInterfaceTitle": "Define a Contract Interface",
   "contractApiConfirmed": "Contract API Confirmed",
@@ -30,7 +31,7 @@
   "datatypeID": "Datatype ID",
   "datatypeShortInfo": "Datatypes are broadcasts to the network so everybody refers to the same JSON schema when validating their data",
   "datatypeTitle": "Send a Broadcast Message",
-  "defineContractInterfaceInfo": "A Contract Interface schema may be in FFI or Solidity JSON ABI format.",
+  "defineContractInterfaceInfo": "A Contract Interface schema may be in FFI or Solidity JSON ABI format. A combination of contract name and version has to be unique.",
   "deployContractInfo": "Follow these steps to deploy a contract on FireFly.",
   "deployContractTitle": "Deploy a Contract",
   "disconnect": "Disconnect",
