Tweak some wording on tutorials
Signed-off-by: Andrew Richardson <andrew.richardson@kaleido.io>

--- a/ui/src/translations/en.json
+++ b/ui/src/translations/en.json
@@ -12,7 +12,7 @@
   "blockchainEventReceived": "Blockchain Event Received",
   "broadcastShortInfo": "Sends a message visible to all parties in the network",
   "broadcastTitle": "Send a Broadcast Message",
-  "burnShortInfo": "Burn a token in a token pool",
+  "burnShortInfo": "Destroy a token in a token pool",
   "burnTitle": "Burn a Token",
   "code": "Code",
   "connect": "Connect",
@@ -31,8 +31,8 @@
   "datatypeID": "Datatype ID",
   "datatypeShortInfo": "Datatypes are broadcasts to the network so everybody refers to the same JSON schema when validating their data",
   "datatypeTitle": "Send a Broadcast Message",
-  "defineContractInterfaceInfo": "A Contract Interface schema may be in FFI or Solidity JSON ABI format. A combination of contract name and version has to be unique.",
-  "deployContractInfo": "Follow these steps to deploy a contract on FireFly.",
+  "defineContractInterfaceInfo": "Upload the interface of your contract, describing all its methods and events, in either FFI or Solidity JSON ABI format",
+  "deployContractInfo": "Follow these steps to compile and deploy a contract on your blockchain",
   "deployContractTitle": "Deploy a Contract",
   "disconnect": "Disconnect",
   "disconnected": "Disconnected",
@@ -86,10 +86,10 @@
   "recipients": "Recipients",
   "referenceID": "Reference ID",
   "refreshConnection": "Refresh Connection",
-  "registerContractApiInfo": "Build an HTTP API for the smart contract you created, complete with an OpenAPI Specification and Swagger UI.",
+  "registerContractApiInfo": "Generate an interactive HTTP API from your contract, complete with an OpenAPI definition and Swagger UI",
   "registerContractApiTitle": "Register a Contract API",
-  "registerContractApiListenerInfo": "Receive blockchain events happening in realtime.",
-  "registerApiListenerTitle": "Register a Contract API LIstener",
+  "registerContractApiListenerInfo": "Instruct FireFly to begin listening to and indexing events from your contract",
+  "registerApiListenerTitle": "Register a Contract Listener",
   "run": "Run",
   "schema": "Schema",
   "serverCode": "Server Code",
