Misc string fixes
Signed-off-by: Andrew Richardson <andrew.richardson@kaleido.io>

--- a/ui/src/translations/en.json
+++ b/ui/src/translations/en.json
@@ -17,8 +17,7 @@
   "code": "Code",
   "connect": "Connect",
   "connected": "Connected",
-  "connectedToFirefly": "Connected to FireFly Node",
-  "connectedToWebsocketAt": "Connected to WebSocket at ",
+  "connectedToFirefly": "Listening for events from backend",
   "connector": "Connector",
   "contractApi": "Contract API",
   "contractInterface": "Contract Interface",
@@ -69,7 +68,7 @@
   "noConnectors": "No Token Connectors",
   "nonfungible": "Non-Fungible",
   "notConnected": "Not Connected",
-  "notConnectedToFirefly": "Not Connected to a FireFly Node",
+  "notConnectedToFirefly": "Not listening for events from backend",
   "noTokenPools": "No Token Pools",
   "nullAddress": "0x0000000000000000000000000000000000000000",
   "operationErrorID": "Operation Error ID",
