[current-state] contracts
Signed-off-by: David Echelberger <eberger727@gmail.com>

--- a/ui/src/translations/en.json
+++ b/ui/src/translations/en.json
@@ -6,6 +6,7 @@
   "amount": "Amount",
   "apiID": "Api ID",
   "apiResponse": "API Response",
+  "apis": "APIs",
   "backToStepOne": "Back to Step 1",
   "batchMessages": "Batch Messages",
   "blockchainEventID": "Blockchain Event ID",
@@ -20,10 +21,10 @@
   "connectedToFirefly": "Listening for events from backend",
   "connector": "Connector",
   "contractApi": "Contract API",
-  "contractInterface": "Contract Interface",
-  "contractInterfaceTitle": "Define a Contract Interface",
   "contractApiConfirmed": "Contract API Confirmed",
+  "contractInterface": "Contract Interface",
   "contractInterfaceConfirmed": "Contract Interface Confirmed",
+  "contractInterfaceTitle": "Define a Contract Interface",
   "contracts": "Contracts",
   "dashboard": "Dashboard",
   "datatypeConfirmed": "Datatype Confirmed",
@@ -48,13 +49,15 @@
   "exampleTopic": "ex. widget_123",
   "ffi": "FFI",
   "filterEventSubscriptions": "Filter Event Subscriptions (Optional)",
+  "fireflyCurrentState": "FireFly's Current State",
   "fromAddress": "From Address",
   "fungible": "Fungible",
   "home": "Home",
-  "interfaceFormat": "Interface Format",
   "identityConfirmed": "Identity Confirmed",
   "identityUpdated": "Identity Updated",
+  "interfaceFormat": "Interface Format",
   "interfaceID": "Interface ID",
+  "listener": "Listener",
   "message": "Message",
   "messageConfirmed": "Message Confirmed",
   "messageID": "Message ID",
@@ -85,10 +88,10 @@
   "recipients": "Recipients",
   "referenceID": "Reference ID",
   "refreshConnection": "Refresh Connection",
-  "registerContractApiInfo": "Generate an interactive HTTP API from your contract, complete with an OpenAPI definition and Swagger UI",
-  "registerContractApiTitle": "Register a Contract API",
-  "registerContractApiListenerInfo": "Instruct FireFly to begin listening to and indexing events from your contract",
   "registerApiListenerTitle": "Register a Contract Listener",
+  "registerContractApiInfo": "Generate an interactive HTTP API from your contract, complete with an OpenAPI definition and Swagger UI",
+  "registerContractApiListenerInfo": "Instruct FireFly to begin listening to and indexing events from your contract",
+  "registerContractApiTitle": "Register a Contract API",
   "run": "Run",
   "schema": "Schema",
   "serverCode": "Server Code",
