--- a/ui/src/translations/en.json
+++ b/ui/src/translations/en.json
@@ -1,6 +1,7 @@
 {
   "abc": "ABC",
   "abcCoin": "ABC Coin",
+
   "abi": "ABI JSON",
   "address": "Address",
   "amount": "Amount",
@@ -8,11 +9,14 @@
   "apiResponse": "API Response",
   "apis": "APIs",
   "backToStepOne": "Back to Step 1",
+  "balances": "Balances",
+  "balancesFor": "Balances for",
   "batchMessages": "Batch Messages",
   "blockchainEventID": "Blockchain Event ID",
   "blockchainEventReceived": "Blockchain Event Received",
   "broadcastShortInfo": "Sends a message visible to all parties in the network",
   "broadcastTitle": "Send a Broadcast Message",
+  "burn": "Burn",
   "burnShortInfo": "Destroy a token in a token pool",
   "burnTitle": "Burn a Token",
   "code": "Code",
@@ -64,6 +68,7 @@
   "messageRejected": "Message Rejected",
   "messageType": "Message Type",
   "messaging": "Messaging",
+  "mint": "Mint",
   "mintShortInfo": "Generate a new token in a token pool",
   "mintTitle": "Mint a Token",
   "name": "Name",
@@ -107,6 +112,7 @@
   "tokenApprovalOpFailed": "Token Approval Operation Failed",
   "tokenBalance": "Token Balance",
   "tokenIndex": "Token Index",
+  "tokenIndexes": "Token Indexes",
   "tokenPool": "Token Pool",
   "tokenPoolConfirmed": "Token Pool Confirmed",
   "tokenRecipient": "Token Recipient",
@@ -114,8 +120,10 @@
   "tokenTransferConfirmed": "Token Transfer Confirmed",
   "tokenTransferFailed": "Token Transfer Failed",
   "topic": "Topic",
+  "total": "Total",
   "transactionID": "Transaction ID",
   "transactionSubmitted": "Transaction Submitted",
+  "transfer": "Transfer",
   "transferID": "Transfer ID",
   "transferShortInfo": "Transfer tokens from one address to another",
   "transferTitle": "Transfer Tokens",
