[spinners] moving copy button
Signed-off-by: David Echelberger <eberger727@gmail.com>

--- a/ui/src/translations/en.json
+++ b/ui/src/translations/en.json
@@ -30,6 +30,7 @@
   "contractInterfaceConfirmed": "Contract Interface Confirmed",
   "contractInterfaceTitle": "Define a Contract Interface",
   "contracts": "Contracts",
+  "copyCode": "Copy Code",
   "dashboard": "Dashboard",
   "datatypeConfirmed": "Datatype Confirmed",
   "datatypeID": "Datatype ID",
