--- a/ui/src/translations/en.json
+++ b/ui/src/translations/en.json
@@ -133,6 +133,5 @@
   "typescriptSDK": "Typescript SDK",
   "uploadFile": "Upload File",
   "version": "Version",
-  "waitingForTxEventsToFinish": "Waiting for Events to Finish...",
-  "websocketConnectionFailure": "Failed to connect to websocket. Please try again."
+  "waitingForTxEventsToFinish": "Waiting for Events to Finish..."
 }
