resolve indefinite waiting for transactions, further cleanup
Signed-off-by: Anastasia Lalamentik <anastasia.lalamentik@kaleido.io>

--- a/ui/src/translations/en.json
+++ b/ui/src/translations/en.json
@@ -24,6 +24,7 @@
   "connected": "Connected",
   "connectedToFirefly": "Listening for events from backend",
   "connector": "Connector",
+  "contractAddressHelperText": "The contract address on your blockchain",
   "contractApi": "Contract API",
   "contractApiConfirmed": "Contract API Confirmed",
   "contractInterface": "Contract Interface",
