define datatype form, message type group state fixes
Signed-off-by: Anastasia Lalamentik <anastasia.lalamentik@kaleido.io>

--- a/ui/src/translations/en.json
+++ b/ui/src/translations/en.json
@@ -32,11 +32,14 @@
   "contractInterfaceTitle": "Define a Contract Interface",
   "contracts": "Contracts",
   "copyCode": "Copy Code",
+  "createDatatypeInfo": "Datatypes are broadcast to the network so everybody refers to the same JSON schema when validating their data.",
+  "createDatatypeTitle": "Define a Datatype",
   "dashboard": "Dashboard",
   "datatypeConfirmed": "Datatype Confirmed",
   "datatypeID": "Datatype ID",
   "datatypeShortInfo": "Datatypes are broadcasts to the network so everybody refers to the same JSON schema when validating their data",
   "datatypeTitle": "Send a Broadcast Message",
+  "datatypes": "Datatypes",
   "defineContractInterfaceInfo": "Upload the interface of your contract, describing all its methods and events, in either FFI or Solidity JSON ABI format",
   "deployContractInfo": "Follow the link on each step to compile and deploy a contract on your blockchain",
   "deployContractTitle": "Deploy a Contract",
@@ -76,6 +79,7 @@
   "name": "Name",
   "namespaceConfirmed": "Namespace Confirmed",
   "noConnectors": "No Token Connectors",
+  "noDatatypes": "No Datatypes",
   "nonfungible": "Non-Fungible",
   "notConnected": "Not Connected",
   "notConnectedToFirefly": "Not listening for events from backend",
