--- a/ui/src/translations/en.json
+++ b/ui/src/translations/en.json
@@ -14,11 +14,13 @@
   "batchMessages": "Batch Messages",
   "blockchainEventID": "Blockchain Event ID",
   "blockchainEventReceived": "Blockchain Event Received",
+  "broadcast": "Broadcast",
   "broadcastShortInfo": "Sends a message visible to all parties in the network",
   "broadcastTitle": "Send a Broadcast Message",
   "burn": "Burn",
   "burnShortInfo": "Destroy a token in a token pool",
   "burnTitle": "Burn a Token",
+  "burnWithData": "Burn with Data",
   "code": "Code",
   "connect": "Connect",
   "connected": "Connected",
@@ -74,9 +76,11 @@
   "messageRejected": "Message Rejected",
   "messageType": "Message Type",
   "messaging": "Messaging",
+  "messagingMethod": "Messaging Method",
   "mint": "Mint",
   "mintShortInfo": "Generate a new token in a token pool",
   "mintTitle": "Mint a Token",
+  "mintWithData": "Mint with Data",
   "name": "Name",
   "namespaceConfirmed": "Namespace Confirmed",
   "noConnectors": "No Token Connectors",
@@ -94,6 +98,7 @@
   "poolSymbol": "Pool Symbol",
   "poolTitle": "Create a Token Pool",
   "postSentTo": "POST Sent to ",
+  "private": "Private",
   "privateShortInfo": "Sends a message to a restricted set of parties",
   "privateTitle": "Send a Private Message",
   "protocolID": "Protocol ID",
@@ -135,6 +140,7 @@
   "transferShortInfo": "Transfer tokens from one address to another",
   "transferTitle": "Transfer Tokens",
   "transferType": "Transfer Type",
+  "transferWithData": "Transfer with Data",
   "type": "Type",
   "typescriptSDK": "Typescript SDK",
   "uploadFile": "Upload File",
