--- a/ui/src/translations/en.json
+++ b/ui/src/translations/en.json
@@ -1,7 +1,6 @@
 {
   "abc": "ABC",
   "abcCoin": "ABCCoin",
-
   "abi": "ABI JSON",
   "address": "Address",
   "amount": "Amount",
@@ -38,9 +37,9 @@
   "dashboard": "Dashboard",
   "datatypeConfirmed": "Datatype Confirmed",
   "datatypeID": "Datatype ID",
+  "datatypes": "Datatypes",
   "datatypeShortInfo": "Datatypes are broadcasts to the network so everybody refers to the same JSON schema when validating their data",
   "datatypeTitle": "Send a Broadcast Message",
-  "datatypes": "Datatypes",
   "defineContractInterfaceInfo": "Upload the interface of your contract, describing all its methods and events, in either FFI or Solidity JSON ABI format",
   "deployContractInfo": "Follow the link on each step to compile and deploy a contract on your blockchain",
   "deployContractTitle": "Deploy a Contract",
@@ -60,6 +59,7 @@
   "ffi": "FFI",
   "filterEventSubscriptions": "Filter Event Subscriptions (Optional)",
   "fireflyCurrentState": "FireFly's Current State",
+  "followStepsInInstructions": "Follow steps outlined in the instructions",
   "fromAddress": "From Address",
   "fungible": "Fungible",
   "home": "Home",
@@ -72,8 +72,8 @@
   "messageConfirmed": "Message Confirmed",
   "messageID": "Message ID",
   "messageRejected": "Message Rejected",
+  "messages": "Messages",
   "messageType": "Message Type",
-  "messaging": "Messaging",
   "mint": "Mint",
   "mintShortInfo": "Generate a new token in a token pool",
   "mintTitle": "Mint a Token",
