--- a/ui/src/translations/en.json
+++ b/ui/src/translations/en.json
@@ -1,12 +1,14 @@
 {
-  "abc": "ABC",
-  "abcCoin": "ABCCoin",
-  "abi": "ABI JSON",
+  "$acme": "$ACME",
+  "acme": "ACME",
   "address": "Address",
   "amount": "Amount",
-  "apiID": "Api ID",
+  "apiID": "API ID",
   "apiResponse": "API Response",
   "apis": "APIs",
+  "apisKnownToFirefly": "APIs Known to FireFly",
+  "applicationCode": "Application Code",
+  "back": "Back",
   "backToStepOne": "Back to Step 1",
   "balances": "Balances",
   "balancesFor": "Balances for",
@@ -19,20 +21,23 @@
   "burnShortInfo": "Destroy a token in a token pool",
   "burnTitle": "Burn a Token",
   "code": "Code",
+  "compileSmartContract": "Compile your smart contract",
   "connect": "Connect",
   "connected": "Connected",
   "connectedToFirefly": "Listening for events from backend",
   "connector": "Connector",
+  "continue": "Continue",
   "contractAddress": "Contract Address",
   "contractAddressHelperText": "The contract address on your blockchain",
   "contractApi": "Contract API",
   "contractApiConfirmed": "Contract API Confirmed",
+  "contractDeployedToFirefly": "Your contract is now deployed to FireFly!",
   "contractInterface": "Contract Interface",
   "contractInterfaceConfirmed": "Contract Interface Confirmed",
   "contractInterfaceTitle": "Define a Contract Interface",
   "contracts": "Contracts",
   "copyCode": "Copy Code",
-  "createDatatypeInfo": "Datatypes are broadcast to the network so everybody refers to the same JSON schema when validating their data.",
+  "createDatatypeInfo": "Datatypes are broadcast to the network so everybody refers to the same JSON schema when validating their data",
   "createDatatypeTitle": "Define a Datatype",
   "dashboard": "Dashboard",
   "datatypeConfirmed": "Datatype Confirmed",
@@ -41,7 +46,8 @@
   "datatypeShortInfo": "Datatypes are broadcasts to the network so everybody refers to the same JSON schema when validating their data",
   "datatypeTitle": "Send a Broadcast Message",
   "defineContractInterfaceInfo": "Upload the interface of your contract, describing all its methods and events, in either FFI or Solidity JSON ABI format",
-  "deployContractInfo": "Follow the link on each step to compile and deploy a contract on your blockchain",
+  "deployCompiledContract": "Deploy your compiled contract",
+  "deployContractInfo": "Compile and deploy a contract to your blockchain",
   "deployContractTitle": "Deploy a Contract",
   "disconnect": "Disconnect",
   "disconnected": "Disconnected",
@@ -58,6 +64,7 @@
   "exampleTopic": "ex. widget_123",
   "ffi": "FFI",
   "filterEventSubscriptions": "Filter Event Subscriptions (Optional)",
+  "finish": "Finish",
   "fireflyCurrentState": "FireFly's Current State",
   "followStepsInInstructions": "Follow steps outlined in the instructions",
   "fromAddress": "From Address",
@@ -65,6 +72,7 @@
   "home": "Home",
   "identityConfirmed": "Identity Confirmed",
   "identityUpdated": "Identity Updated",
+  "installSolc": "Install the Solidity Compiler",
   "interfaceFormat": "Interface Format",
   "interfaceID": "Interface ID",
   "listener": "Listener",
@@ -79,6 +87,8 @@
   "mintTitle": "Mint a Token",
   "name": "Name",
   "namespaceConfirmed": "Namespace Confirmed",
+  "noAPIsRegisteredWithFireFly": "No APIs Registered with FireFly",
+  "noBalancesForWallet": "No Balances for Wallet",
   "noConnectors": "No Token Connectors",
   "noDatatypes": "No Datatypes",
   "nonfungible": "Non-Fungible",
