--- a/ui/src/translations/en.json
+++ b/ui/src/translations/en.json
@@ -125,6 +125,7 @@
   "serverCode": "Server Code",
   "serverCodeInfo": "Build an action using the panels on the left. When you press run, the backend Node.js server will execute a code snippet similar to below.",
   "serverResponse": "Server Response",
+  "specifyDatatype": "Specify Datatype",
   "standard": "Standard",
   "subscribe": "Subscribe",
   "subscription": "Subscription",
