[info-fields] helper fields for forms
Signed-off-by: David Echelberger <eberger727@gmail.com>

--- a/ui/src/translations/en.json
+++ b/ui/src/translations/en.json
@@ -31,7 +31,7 @@
   "connector": "Connector",
   "continue": "Continue",
   "contractAddress": "Contract Address",
-  "contractAddressHelperText": "The contract address on your blockchain",
+  "contractAddressHelperText": "The contract address on your blockchain.",
   "contractApi": "Contract API",
   "contractApiConfirmed": "Contract API Confirmed",
   "contractDeployedToFirefly": "Your contract is now deployed to FireFly!",
@@ -46,6 +46,7 @@
   "datatypeConfirmed": "Datatype Confirmed",
   "datatypeID": "Datatype ID",
   "datatypes": "Datatypes",
+  "datatypeSchemaHelperText": "A JSON schema that parties will validate data against.",
   "datatypeShortInfo": "Datatypes are broadcasts to the network so everybody refers to the same JSON schema when validating their data",
   "datatypeTitle": "Send a Broadcast Message",
   "defineContractInterfaceInfo": "Upload the interface of your contract, describing all its methods and events, in either FFI or Solidity JSON ABI format",
@@ -114,6 +115,7 @@
   "privateTitle": "Send a Private Message",
   "protocolID": "Protocol ID",
   "recipients": "Recipients",
+  "recipientsHelperText": "A restricted set of parties to send the message to.",
   "referenceID": "Reference ID",
   "refreshConnection": "Refresh Connection",
   "registerApiListenerTitle": "Register a Contract Listener",
@@ -131,6 +133,7 @@
   "subscription": "Subscription",
   "symbol": "Symbol",
   "tag": "Tag",
+  "tagHelperText": "The reason for the broadcast. An application specific type for the message.",
   "toAddress": "To Address",
   "tokenApprovalConfirmed": "Token Approval Confirmed",
   "tokenApprovalOpFailed": "Token Approval Operation Failed",
@@ -138,12 +141,15 @@
   "tokenIndex": "Token Index",
   "tokenIndexes": "Token Indexes",
   "tokenPool": "Token Pool",
+  "tokenPoolAddressHelperText": "The address of the token contract that you want FireFly to index.",
   "tokenPoolConfirmed": "Token Pool Confirmed",
+  "tokenPoolRecipientHelperText": "The account to transfer the token(s) to.",
   "tokenRecipient": "Token Recipient",
   "tokens": "Tokens",
   "tokenTransferConfirmed": "Token Transfer Confirmed",
   "tokenTransferFailed": "Token Transfer Failed",
   "topic": "Topic",
+  "topicHelperText": "A well known identifier that relates to the information you are publishing.",
   "total": "Total",
   "transactionID": "Transaction ID",
   "transactionSubmitted": "Transaction Submitted",
