[decimals] decimal support
Signed-off-by: David Echelberger <eberger727@gmail.com>

--- a/ui/src/translations/en.json
+++ b/ui/src/translations/en.json
@@ -39,6 +39,7 @@
   "contractInterfaceConfirmed": "Contract Interface Confirmed",
   "contractInterfaceTitle": "Define a Contract Interface",
   "contracts": "Contracts",
+  "contractTopicHelperText": "An identifier on the FireFly event that is emitted each time a blockchain event is detected from the blockchain.",
   "copyCode": "Copy Code",
   "createDatatypeInfo": "Datatypes are broadcast to the network so everybody refers to the same JSON schema when validating their data",
   "createDatatypeTitle": "Define a Datatype",
@@ -133,7 +134,7 @@
   "subscription": "Subscription",
   "symbol": "Symbol",
   "tag": "Tag",
-  "tagHelperText": "The reason for the broadcast. An application specific type for the message.",
+  "tagHelperText": "Indicates the purpose of the message to the applications that process it.",
   "toAddress": "To Address",
   "tokenApprovalConfirmed": "Token Approval Confirmed",
   "tokenApprovalOpFailed": "Token Approval Operation Failed",
@@ -141,7 +142,7 @@
   "tokenIndex": "Token Index",
   "tokenIndexes": "Token Indexes",
   "tokenPool": "Token Pool",
-  "tokenPoolAddressHelperText": "The address of the token contract that you want FireFly to index.",
+  "tokenPoolAddressHelperText": "The address of an existing token contract, if supported by the token connector.",
   "tokenPoolConfirmed": "Token Pool Confirmed",
   "tokenPoolRecipientHelperText": "The account to transfer the token(s) to.",
   "tokenRecipient": "Token Recipient",
@@ -149,7 +150,7 @@
   "tokenTransferConfirmed": "Token Transfer Confirmed",
   "tokenTransferFailed": "Token Transfer Failed",
   "topic": "Topic",
-  "topicHelperText": "A well known identifier that relates to the information you are publishing.",
+  "topicHelperText": "Associates this message with an ordered stream of data. Using the default topic is discouraged.",
   "total": "Total",
   "transactionID": "Transaction ID",
   "transactionSubmitted": "Transaction Submitted",
