[better-transactionMap] font sizes
Signed-off-by: David Echelberger <eberger727@gmail.com>

--- a/ui/src/translations/en.json
+++ b/ui/src/translations/en.json
@@ -23,7 +23,7 @@
   "burn": "Burn",
   "burnShortInfo": "Destroys tokens in a token pool",
   "burnTitle": "Burn a Token",
-  "burnWithData": "Burn with Data",
+  "burnWithMessage": "Burn with Message",
   "code": "Code",
   "compileSmartContract": "Compile your smart contract",
   "connect": "Connect",
@@ -96,7 +96,7 @@
   "mint": "Mint",
   "mintShortInfo": "Generates a new token in a token pool",
   "mintTitle": "Mint a Token",
-  "mintWithData": "Mint with Data",
+  "mintWithMessage": "Mint with Message",
   "name": "Name",
   "namespaceConfirmed": "Namespace Confirmed",
   "noAPIsRegisteredWithFireFly": "No APIs Registered with FireFly",
@@ -164,7 +164,7 @@
   "transferShortInfo": "Transfers tokens to another account",
   "transferTitle": "Transfer Tokens",
   "transferType": "Transfer Type",
-  "transferWithData": "Transfer with Data",
+  "transferWithMessage": "Transfer with Message",
   "type": "Type",
   "typescriptSDK": "Typescript SDK",
   "uploadFile": "Upload File",
