[better-transactionMap] updating eventtypes
Signed-off-by: David Echelberger <eberger727@gmail.com>

--- a/ui/src/translations/en.json
+++ b/ui/src/translations/en.json
@@ -10,6 +10,7 @@
   "apisKnownToFirefly": "APIs Known to FireFly",
   "appCodeInstructions": "Build an action using the panels on the left. Click \"Run\" to execute the action via the backend server. FireFly events related to the transaction will appear on the right.",
   "applicationCode": "Application Code",
+  "approvalID": "Approval ID",
   "back": "Back",
   "backToStepOne": "Back to Step 1",
   "balances": "Balances",
@@ -17,6 +18,8 @@
   "batchMessages": "Batch Messages",
   "blockchainEventID": "Blockchain Event ID",
   "blockchainEventReceived": "Blockchain Event Received",
+  "blockchainInvokeFailed": "Blockchain Invoke Failed",
+  "blockchainInvokeSucceeded": "Blockchain Invoke Succeeded",
   "broadcast": "Broadcast",
   "broadcastShortInfo": "Sends a message visible to all parties in the network",
   "broadcastTitle": "Send a Broadcast Message",
@@ -55,6 +58,7 @@
   "deployCompiledContract": "Deploy your compiled contract",
   "deployContractInfo": "Compile and deploy your contract to the blockchain",
   "deployContractTitle": "Deploy a Contract",
+  "did": "DID",
   "disconnect": "Disconnect",
   "disconnected": "Disconnected",
   "docs": "Docs",
@@ -80,6 +84,7 @@
   "fungible": "Fungible",
   "home": "Home",
   "identityConfirmed": "Identity Confirmed",
+  "identityID": "Identity ID",
   "identityUpdated": "Identity Updated",
   "installSolc": "Install the Solidity Compiler",
   "interfaceFormat": "Interface Format",
@@ -99,6 +104,7 @@
   "mintWithMessage": "Mint with Message",
   "name": "Name",
   "namespaceConfirmed": "Namespace Confirmed",
+  "namespaceID": "Namespace ID",
   "noAPIsRegisteredWithFireFly": "No APIs Registered with FireFly",
   "noBalancesForWallet": "No Balances for Wallet",
   "noConnectors": "No Token Connectors",
@@ -108,7 +114,9 @@
   "notConnectedToFirefly": "Not listening for events from backend",
   "noTokenPools": "No Token Pools",
   "nullAddress": "0x0000000000000000000000000000000000000000",
+  "operationError": "Operation Error",
   "operationErrorID": "Operation Error ID",
+  "operationID": "Operation ID",
   "or": "or",
   "payload": "Payload",
   "poolID": "Pool ID",
@@ -136,6 +144,7 @@
   "solidityABI": "Solidity ABI",
   "specifyDatatype": "Specify Datatype",
   "standard": "Standard",
+  "subject": "Subject",
   "subscribe": "Subscribe",
   "subscription": "Subscription",
   "symbol": "Symbol",
@@ -150,6 +159,8 @@
   "tokenPool": "Token Pool",
   "tokenPoolAddressHelperText": "The address of an existing token contract, if supported by the token connector.",
   "tokenPoolConfirmed": "Token Pool Confirmed",
+  "tokenPoolFailed": "Token Pool Failed",
+  "tokenPoolRecipientHelperText": "The account to transfer the token(s) to.",
   "tokenRecipient": "Token Recipient",
   "tokens": "Tokens",
   "tokenTransferConfirmed": "Token Transfer Confirmed",
