[better-transactionMap] auto-refresh state boxes in tokens and apis
Signed-off-by: David Echelberger <eberger727@gmail.com>

--- a/ui/src/translations/en.json
+++ b/ui/src/translations/en.json
@@ -16,6 +16,7 @@
   "balances": "Balances",
   "balancesFor": "Balances for",
   "batchMessages": "Batch Messages",
+  "batchPin": "Batch Pin",
   "blockchainEventID": "Blockchain Event ID",
   "blockchainEventReceived": "Blockchain Event Received",
   "blockchainInvokeFailed": "Blockchain Invoke Failed",
@@ -42,6 +43,7 @@
   "contractInterface": "Contract Interface",
   "contractInterfaceConfirmed": "Contract Interface Confirmed",
   "contractInterfaceTitle": "Define a Contract Interface",
+  "contractInvoke": "Contract Invoke",
   "contractListenerNameHelperText": "A custom name for your listener",
   "contracts": "Contracts",
   "contractTopicHelperText": "A FireFly identifier to group events across multiple listeners.",
@@ -109,6 +111,7 @@
   "noBalancesForWallet": "No Balances for Wallet",
   "noConnectors": "No Token Connectors",
   "noDatatypes": "No Datatypes",
+  "none": "None",
   "nonfungible": "Non-Fungible",
   "notConnected": "Not Connected",
   "notConnectedToFirefly": "Not listening for events from backend",
@@ -151,6 +154,7 @@
   "tag": "Tag",
   "tagHelperText": "Indicates the purpose of the message to the applications that process it.",
   "toAddress": "To Address",
+  "tokenApproval": "Token Approval",
   "tokenApprovalConfirmed": "Token Approval Confirmed",
   "tokenApprovalOpFailed": "Token Approval Operation Failed",
   "tokenBalance": "Token Balance",
@@ -163,6 +167,7 @@
   "tokenPoolRecipientHelperText": "The account to transfer the token(s) to.",
   "tokenRecipient": "Token Recipient",
   "tokens": "Tokens",
+  "tokenTransfer": "Token Transfer",
   "tokenTransferConfirmed": "Token Transfer Confirmed",
   "tokenTransferFailed": "Token Transfer Failed",
   "topic": "Topic",
@@ -170,6 +175,7 @@
   "total": "Total",
   "transactionID": "Transaction ID",
   "transactionSubmitted": "Transaction Submitted",
+  "transaction": "Transaction",
   "transfer": "Transfer",
   "transferID": "Transfer ID",
   "transferShortInfo": "Transfers tokens to another account",
@@ -178,6 +184,7 @@
   "transferWithMessage": "Transfer with Message",
   "type": "Type",
   "typescriptSDK": "Typescript SDK",
+  "unpinned": "Unpinned",
   "uploadFile": "Upload File",
   "version": "Version",
   "waitingForTxEventsToFinish": "Waiting for events to finish"
