[better-transactionMap] wording
Signed-off-by: David Echelberger <eberger727@gmail.com>

--- a/ui/src/translations/en.json
+++ b/ui/src/translations/en.json
@@ -11,6 +11,7 @@
   "appCodeInstructions": "Build an action using the panels on the left. Click \"Run\" to execute the action via the backend server. FireFly events related to the transaction will appear on the right.",
   "applicationCode": "Application Code",
   "approvalID": "Approval ID",
+  "attachAMessage": "Attach a Message",
   "back": "Back",
   "backToStepOne": "Back to Step 1",
   "balances": "Balances",
@@ -27,7 +28,6 @@
   "burn": "Burn",
   "burnShortInfo": "Destroys tokens in a token pool",
   "burnTitle": "Burn a Token",
-  "burnWithMessage": "Burn with Message",
   "code": "Code",
   "compileSmartContract": "Compile your smart contract",
   "connect": "Connect",
@@ -103,7 +103,6 @@
   "mint": "Mint",
   "mintShortInfo": "Generates a new token in a token pool",
   "mintTitle": "Mint a Token",
-  "mintWithMessage": "Mint with Message",
   "name": "Name",
   "namespaceConfirmed": "Namespace Confirmed",
   "namespaceID": "Namespace ID",
@@ -173,15 +172,14 @@
   "topic": "Topic",
   "topicHelperText": "Associates this message with an ordered stream of data.",
   "total": "Total",
+  "transaction": "Transaction",
   "transactionID": "Transaction ID",
   "transactionSubmitted": "Transaction Submitted",
-  "transaction": "Transaction",
   "transfer": "Transfer",
   "transferID": "Transfer ID",
   "transferShortInfo": "Transfers tokens to another account",
   "transferTitle": "Transfer Tokens",
   "transferType": "Transfer Type",
-  "transferWithMessage": "Transfer with Message",
   "type": "Type",
   "typescriptSDK": "Typescript SDK",
   "unpinned": "Unpinned",
