[fabric-support] disabling tokens if plugin doesnt exist. Reformatting header
Signed-off-by: David Echelberger <eberger727@gmail.com>

--- a/ui/src/translations/en.json
+++ b/ui/src/translations/en.json
@@ -63,6 +63,7 @@
   "did": "DID",
   "disconnect": "Disconnect",
   "disconnected": "Disconnected",
+  "discord": "Discord",
   "docs": "Docs",
   "durable": "Durable",
   "either": "Either",
@@ -84,6 +85,7 @@
   "format": "format",
   "fromAddress": "From Address",
   "fungible": "Fungible",
+  "github": "Github",
   "home": "Home",
   "identityConfirmed": "Identity Confirmed",
   "identityID": "Identity ID",
