[fabric-support] fabric template support
Signed-off-by: David Echelberger <eberger727@gmail.com>

--- a/ui/src/translations/en.json
+++ b/ui/src/translations/en.json
@@ -28,6 +28,10 @@
   "burn": "Burn",
   "burnShortInfo": "Destroys tokens in a token pool",
   "burnTitle": "Burn a Token",
+  "chaincode": "Chaincode",
+  "chaincodeHelperText": "The name of the deployed Chaincode.",
+  "channel": "Channel",
+  "channelHelperText": "The channel where the Chaincode has been deployed.",
   "code": "Code",
   "compileSmartContract": "Compile your smart contract",
   "connect": "Connect",
