--- a/ui/src/translations/en.json
+++ b/ui/src/translations/en.json
@@ -79,6 +79,7 @@
   "exampleAmount": "ex. 10",
   "exampleFromAddress": "ex. 0x987....321",
   "exampleTag": "ex. new_widget",
+  "exampleTokenIndex": "ex. 7",
   "exampleTopic": "ex. widget_123",
   "ffi": "FFI - FireFly Interface",
   "ffiShort": "FFI",
