add block number to token pool example
Signed-off-by: Alex Shorsher <alex.shorsher@kaleido.io>

--- a/ui/src/translations/en.json
+++ b/ui/src/translations/en.json
@@ -193,5 +193,7 @@
   "unpinned": "Unpinned",
   "uploadFile": "Upload File",
   "version": "Version",
-  "waitingForTxEventsToFinish": "Waiting for events to finish"
+  "waitingForTxEventsToFinish": "Waiting for events to finish",
+  "blockNumber": "Block Number",
+  "blockNumberDescription": "The block number to subscribe from."
 }
